--- a/src/main/resources/com/scout/scenes/scene1.fxml
+++ b/src/main/resources/com/scout/scenes/scene1.fxml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.scout.ui.*?>
-<?import java.lang.*?>
-<?import javafx.collections.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
@@ -21,56 +19,42 @@
    <Button id="prevPageButton" layoutX="40.0" layoutY="430.0" mnemonicParsing="false" onAction="#prevPage" prefHeight="60.0" prefWidth="175.0" text="Prev Page" />
    <Button id="nextPageButton" layoutX="1105.0" layoutY="430.0" mnemonicParsing="false" onAction="#nextPage" prefHeight="60.0" prefWidth="175.0" text="Next Page" />
 
-   <ImageView fx:id="startLocationPNG" fitHeight="243.0" fitWidth="523.0" layoutX="793.0" layoutY="148.0" pickOnBounds="true" preserveRatio="true">
+   <ImageView fx:id="startLocationPNG" fitHeight="243.0" fitWidth="523.0" layoutX="797.0" layoutY="148.0" pickOnBounds="true" preserveRatio="true">
       <Image url="@../images/start_locs.png" />
    </ImageView>
 
-   <Text id="alliance" layoutX="60.0" layoutY="340.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Robot Alliance" wrappingWidth="233.5999999999999" />
-   <RadioButton id="allianceR" layoutX="277.0" layoutY="286.0" mnemonicParsing="false" text="R" userData="R">
-      <toggleGroup>
-         <ToggleGroup fx:id="alliance" />
-      </toggleGroup>
-   </RadioButton>
-   <RadioButton id="allianceB" layoutX="277.0" layoutY="343.0" mnemonicParsing="false" text="B" userData="B">
-      <toggleGroup>
-         <fx:reference source="alliance" />
-      </toggleGroup>
-   </RadioButton>
+   <Label id="startLocation" layoutX="56.0" layoutY="277.0" prefHeight="105.0" prefWidth="181.0" text="Starting Location" />
 
-   <Label id="startLocation" layoutX="427.0" layoutY="288.0" prefHeight="105.0" prefWidth="181.0" text="Starting Location" />
-
-   <RadioButton id="startLocation1" layoutX="639.0" layoutY="256.0" mnemonicParsing="false" text="1" userData="1">
+   <RadioButton id="startLocation1" layoutX="252.0" layoutY="270.0" mnemonicParsing="false" text="1" userData="1">
       <toggleGroup>
          <ToggleGroup fx:id="startLocation" />
       </toggleGroup>
    </RadioButton>
-   <RadioButton id="startLocation2" layoutX="639.0" layoutY="307.0" mnemonicParsing="false" text="2" userData="2">
+   <RadioButton id="startLocation2" layoutX="252.0" layoutY="320.0" mnemonicParsing="false" text="2" userData="2">
       <toggleGroup>
          <fx:reference source="startLocation" />
       </toggleGroup>
    </RadioButton>
-   <RadioButton id="startLocation3" layoutX="639.0" layoutY="359.0" mnemonicParsing="false" text="3" userData="3">
+   <RadioButton id="startLocation3" layoutX="252.0" layoutY="370.0" mnemonicParsing="false" text="3" userData="3">
       <toggleGroup>
          <fx:reference source="startLocation" />
       </toggleGroup>
    </RadioButton>
    <Button id="flipImageButton" layoutX="956.0" layoutY="72.0" mnemonicParsing="false" onAction="#flipImage" text="Flip Image" />
    <Text id="teamNameText" fx:id="teamNameText" layoutX="31.0" layoutY="182.0" strokeType="OUTSIDE" strokeWidth="0.0" text="You are scouting:" wrappingWidth="744.8585796356201" />
-   <Label layoutX="559.0" layoutY="164.0" text="Driver Station">
+   <Label layoutX="496.0" layoutY="209.0" text="Driver Station">
       <font>
-         <Font size="24.0" />
+         <Font size="32.0" />
       </font>
    </Label>
-   <ComboBox id="driveStation" fx:id="driveStation" layoutX="573.0" layoutY="200.0" prefHeight="33.0" prefWidth="181.0">
-      <items>
-         <FXCollections fx:factory="observableArrayList">
-            <String fx:value="Red1" />
-            <String fx:value="Red2" />
-            <String fx:value="Red3" />
-            <String fx:value="Blue1" />
-            <String fx:value="Blue2" />
-            <String fx:value="Blue3" />
-         </FXCollections>
-      </items>
-   </ComboBox>
+   <RadioButton id="driveStation" layoutX="440.0" layoutY="260.0" mnemonicParsing="false" style="-fx-text-fill: red;" text="Red1" userData="Red1">
+      <toggleGroup>
+         <ToggleGroup fx:id="driveStation" />
+      </toggleGroup>
+   </RadioButton>
+   <RadioButton id="driveStation" layoutX="440.0" layoutY="315.0" mnemonicParsing="false" style="-fx-text-fill: red;" text="Red2" toggleGroup="$driveStation" userData="Red2" />
+   <RadioButton id="driveStation" layoutX="440.0" layoutY="370.0" mnemonicParsing="false" style="-fx-text-fill: red;" text="Red3" toggleGroup="$driveStation" userData="Red3" />
+   <RadioButton id="driveStation" layoutX="615.0" layoutY="260.0" mnemonicParsing="false" style="-fx-text-fill: blue;" text="Blue1" toggleGroup="$driveStation" userData="Blue1" />
+   <RadioButton id="driveStation" layoutX="615.0" layoutY="313.0" mnemonicParsing="false" style="-fx-text-fill: blue;" text="Blue2" toggleGroup="$driveStation" userData="Blue2" />
+   <RadioButton id="driveStation" layoutX="615.0" layoutY="370.0" mnemonicParsing="false" style="-fx-text-fill: blue;" text="Blue3" toggleGroup="$driveStation" userData="Blue3" />
 </Pane>
