--- a/src/main/resources/com/scout/scenes/scene5.fxml
+++ b/src/main/resources/com/scout/scenes/scene5.fxml
@@ -17,7 +17,6 @@
 
    <Label id="driverSkill" layoutX="40.0" layoutY="117.0" text="Driver Skill/SPEED" />
    <Rating fx:id="driver" layoutX="422.0" layoutY="119.0" rating="3.0" />
-
-   <Text id="scoutNameText" layoutX="40.0" layoutY="239.0" text="Scouter Name" />
    <LimitedTextField id="scoutNameTextField" fx:id="scoutName" layoutX="317.0" layoutY="201.0" onKeyPressed="#validateInput" prefHeight="37.0" prefWidth="299.0" />
+   <Label id="scoutNameText" layoutX="40.0" layoutY="211.0" text="Scouter Name" />
 </Pane>
