--- a/src/main/resources/com/scout/scenes/scene3.fxml
+++ b/src/main/resources/com/scout/scenes/scene3.fxml
@@ -66,7 +66,7 @@
    <Button id="prevPageButton" layoutX="40.0" layoutY="750.0" mnemonicParsing="false" onAction="#prevPage" prefHeight="60.0" prefWidth="175.0" text="Prev Page" />
    <Button id="nextPageButton" layoutX="1105.0" layoutY="750.0" mnemonicParsing="false" onAction="#nextPage" prefHeight="60.0" prefWidth="175.0" text="Next Page" />
 
-   <Label id="teleop" layoutX="590.0" layoutY="14.0" text="Teleop" />
+   <Label id="teleop" layoutX="532.0" layoutY="12.0" text="Teleop" />
 
    <GridPane fx:id="t_grid" layoutX="160.0" layoutY="410.0" prefHeight="333.0" prefWidth="999.0">
       <columnConstraints>
@@ -116,9 +116,9 @@
    <Label id="pickups" layoutX="42.0" layoutY="102.0" />
 
    <Label id="communityPickups" layoutX="50.0" layoutY="202.0" text="Community" />
-   <Label id="neutralPickups" layoutX="47.0" layoutY="275.0" prefHeight="96.0" prefWidth="229.0" text="Neutral Zone" textAlignment="CENTER" wrapText="true" />
-   <Label id="singlePickups" layoutX="607.0" layoutY="181.0" prefHeight="79.0" prefWidth="359.0" text="Single Substation (ground)" textAlignment="CENTER" wrapText="true" />
-   <Label id="doublePickups" layoutX="590.0" layoutY="279.0" prefHeight="116.0" prefWidth="377.0" text="Double Substation (shelf)" textAlignment="CENTER" wrapText="true" />
+   <Label id="neutralPickups" layoutX="50.0" layoutY="280.0" prefHeight="96.0" prefWidth="229.0" text="Neutral Zone" textAlignment="CENTER" wrapText="true" />
+   <Label id="singlePickups" layoutX="490.0" layoutY="192.0" prefHeight="79.0" prefWidth="359.0" text="Single Substation (ground)" textAlignment="CENTER" wrapText="true" />
+   <Label id="doublePickups" layoutX="490.0" layoutY="280.0" prefHeight="116.0" prefWidth="377.0" text="Double Substation (shelf)" textAlignment="CENTER" wrapText="true" />
    <Label layoutX="13.0" layoutY="555.0" style="-fx-font-weight: bold;" text="MID NODES">
       <font>
          <Font size="24.0" />
@@ -140,8 +140,10 @@
       </font>
    </Label>
    <Label layoutX="600.0" layoutY="378.0" prefHeight="37.0" prefWidth="121.0" text="↑ Driver Stations" wrapText="true" />
-   <PlusMinusBox fx:id="communityPickups" layoutX="315.0" layoutY="197.0" />
-   <PlusMinusBox fx:id="neutralPickups" layoutX="315.0" layoutY="300.0" />
-   <PlusMinusBox fx:id="singlePickups" layoutX="1041.0" layoutY="202.0" />
-   <PlusMinusBox fx:id="doublePickups" layoutX="1041.0" layoutY="323.0" />
+   <PlusMinusBox fx:id="communityPickups" layoutX="285.0" layoutY="197.0" />
+   <PlusMinusBox fx:id="neutralPickups" layoutX="285.0" layoutY="300.0" />
+   <PlusMinusBox fx:id="singlePickups" layoutX="890.0" layoutY="197.0" />
+   <PlusMinusBox fx:id="doublePickups" layoutX="890.0" layoutY="300.0" />
+   <Label id="superChargeScored" layoutX="764.0" layoutY="100.0" prefHeight="76.0" prefWidth="323.0" text="Supercharged Scored " textAlignment="CENTER" wrapText="true" />
+   <PlusMinusBox fx:id="superChargeScored" layoutX="1072.0" layoutY="118.0" />
 </Pane>
