--- a/src/main/resources/com/scout/css/scene2.css
+++ b/src/main/resources/com/scout/css/scene2.css
@@ -2,8 +2,14 @@
     font-family: "Mandatory Plaything";
     src: url(MandatoryPlaything.otf);
 }
+
 * {
     -fx-font-family: "Mandatory Plaything";
+}
+
+.label {
+    -fx-font-size: 32px;
+    -fx-font-weight: bold;
 }
 
 #auton {
@@ -11,12 +17,18 @@
     -fx-font-weight: bold;
 }
 
+#selectionButton {
+    -fx-font-size: 32px;
+    -fx-font-weight: bold;
+    -fx-wrap-text: true;
+}
+
 #mobility {
     -fx-font-size: 32px;
     -fx-font-weight: bold;
 }
 
-#prevPageButton {
+#pageButton {
     -fx-font-size: 27px;
     -fx-font-weight: bold;
     -fx-text-fill: #ffffff;
@@ -26,78 +38,7 @@
     -fx-alignment: center;
 }
 
-#nextPageButton {
-    -fx-font-size: 27px;
+#tinyLabels {
+    -fx-font-size: 18px;
     -fx-font-weight: bold;
-    -fx-text-fill: #ffffff;
-    -fx-background-color: #000000;
-    -fx-background-radius: 5px;
-    -fx-padding: 5px;
-    -fx-alignment: center;
-}
-
-#chargeStation {
-    -fx-font-size: 32px;
-    -fx-font-weight: bold;
-    -fx-text-alignment: center;
-}
-
-#preload {
-    -fx-font-size: 32px;
-    -fx-font-weight: bold;
-    -fx-text-alignment: center;
-}
-
-#chargeStationEngage {
-    -fx-font-size: 32px;
-    -fx-font-weight: bold;
-    -fx-text-alignment: center;
-}
-
-#chargeStationDock {
-    -fx-font-size: 32px;
-    -fx-font-weight: bold;
-    -fx-text-alignment: center;
-}
-
-#chargeStationFail {
-    -fx-font-size: 32px;
-    -fx-font-weight: bold;
-    -fx-text-alignment: center;
-}
-
-#chargeStationNA {
-    -fx-font-size: 32px;
-    -fx-font-weight: bold;
-    -fx-text-alignment: center;
-}
-
-#preloadCone {
-    -fx-font-size: 32px;
-    -fx-font-weight: bold;
-    -fx-text-alignment: center;
-}
-
-#preloadCube {
-    -fx-font-size: 32px;
-    -fx-font-weight: bold;
-    -fx-text-alignment: center;
-}
-
-#preloadNA {
-    -fx-font-size: 32px;
-    -fx-font-weight: bold;
-    -fx-text-alignment: center;
-}
-
-#pickupText {
-    -fx-font-size: 32px;
-    -fx-font-weight: bold;
-    -fx-text-alignment: center;
-}
-
-#changePicture {
-    -fx-font-size: 20px;
-    -fx-font-weight: bold;
-    -fx-text-alignment: center;
 }
