--- a/src/main/resources/com/scout/scenes/scene3.fxml
+++ b/src/main/resources/com/scout/scenes/scene3.fxml
@@ -63,12 +63,12 @@
       </fill>
    </Rectangle>
 
-   <Button id="prevPageButton" layoutX="40.0" layoutY="750.0" mnemonicParsing="false" onAction="#prevPage" prefHeight="60.0" prefWidth="175.0" text="Prev Page" />
-   <Button id="nextPageButton" layoutX="1105.0" layoutY="750.0" mnemonicParsing="false" onAction="#nextPage" prefHeight="60.0" prefWidth="175.0" text="Next Page" />
+   <Button id="pageButton" layoutX="40.0" layoutY="765.0" mnemonicParsing="false" onAction="#prevPage" prefHeight="60.0" prefWidth="175.0" text="Prev Page" />
+   <Button id="pageButton" layoutX="1105.0" layoutY="765.0" mnemonicParsing="false" onAction="#nextPage" prefHeight="60.0" prefWidth="175.0" text="Next Page" />
 
    <Label id="teleop" layoutX="532.0" layoutY="12.0" text="Teleop" />
 
-   <GridPane fx:id="t_grid" layoutX="160.0" layoutY="410.0" prefHeight="333.0" prefWidth="999.0">
+   <GridPane fx:id="t_grid" layoutX="160.0" layoutY="419.0" prefHeight="333.0" prefWidth="999.0">
       <columnConstraints>
          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -115,35 +115,38 @@
    </GridPane>
    <Label id="pickups" layoutX="42.0" layoutY="102.0" />
 
-   <Label id="communityPickups" layoutX="50.0" layoutY="202.0" text="Community" />
-   <Label id="neutralPickups" layoutX="50.0" layoutY="280.0" prefHeight="96.0" prefWidth="229.0" text="Neutral Zone" textAlignment="CENTER" wrapText="true" />
-   <Label id="singlePickups" layoutX="490.0" layoutY="192.0" prefHeight="79.0" prefWidth="359.0" text="Single Substation (ground)" textAlignment="CENTER" wrapText="true" />
-   <Label id="doublePickups" layoutX="490.0" layoutY="280.0" prefHeight="116.0" prefWidth="377.0" text="Double Substation (shelf)" textAlignment="CENTER" wrapText="true" />
-   <Label layoutX="13.0" layoutY="555.0" style="-fx-font-weight: bold;" text="MID NODES">
+   <Label id="communityPickups" layoutX="105.0" layoutY="124.0" text="Community" />
+   <Label id="neutralPickups" layoutX="101.0" layoutY="186.0" prefHeight="96.0" prefWidth="229.0" text="Neutral Zone" textAlignment="CENTER" wrapText="true" />
+   <Label id="singlePickups" layoutX="669.0" layoutY="99.0" prefHeight="79.0" prefWidth="359.0" text="Single Substation (ground)" textAlignment="CENTER" wrapText="true" />
+   <Label id="doublePickups" layoutX="660.0" layoutY="186.0" prefHeight="116.0" prefWidth="377.0" text="Double Substation (shelf)" textAlignment="CENTER" wrapText="true" />
+   <Label id="tinyLabels" layoutX="40.0" layoutY="574.0" style="-fx-font-weight: bold;" text="MID NODES">
       <font>
          <Font size="24.0" />
       </font>
    </Label>
-   <Label layoutX="13.0" layoutY="438.0" prefHeight="58.0" prefWidth="146.0" style="-fx-font-weight: bold;" text="TOP NODES" textAlignment="CENTER" wrapText="true">
+   <Label id="tinyLabels" layoutX="41.0" layoutY="459.0" prefHeight="27.0" prefWidth="120.0" style="-fx-font-weight: bold;" text="TOP NODES" textAlignment="CENTER" wrapText="true">
       <font>
          <Font size="24.0" />
       </font>
    </Label>
-   <Label layoutX="58.0" layoutY="642.0" prefHeight="86.0" prefWidth="95.0" style="-fx-font-weight: bold;" text="HYBRID NODES" textAlignment="CENTER" wrapText="true">
+   <Label id="tinyLabels" layoutX="57.0" layoutY="658.0" prefHeight="86.0" prefWidth="95.0" style="-fx-font-weight: bold;" text="HYBRID NODES" textAlignment="CENTER" wrapText="true">
       <font>
          <Font size="24.0" />
       </font>
    </Label>
-   <Label layoutX="57.0" layoutY="112.0" prefHeight="86.0" prefWidth="301.0" style="-fx-font-weight: bold; -fx-font-style: italic;" text="Pickups in..." textAlignment="CENTER" underline="true" wrapText="true">
+   <Label layoutX="41.0" layoutY="48.0" prefHeight="86.0" prefWidth="301.0" style="-fx-font-weight: bold; -fx-font-style: italic;" text="Pickups in..." textAlignment="CENTER" underline="true" wrapText="true">
       <font>
          <Font size="40.0" />
       </font>
    </Label>
-   <Label layoutX="600.0" layoutY="378.0" prefHeight="37.0" prefWidth="121.0" text="↑ Driver Stations" wrapText="true" />
-   <PlusMinusBox fx:id="communityPickups" layoutX="285.0" layoutY="197.0" />
-   <PlusMinusBox fx:id="neutralPickups" layoutX="285.0" layoutY="300.0" />
-   <PlusMinusBox fx:id="singlePickups" layoutX="890.0" layoutY="197.0" />
-   <PlusMinusBox fx:id="doublePickups" layoutX="890.0" layoutY="300.0" />
-   <Label id="superChargeScored" layoutX="764.0" layoutY="100.0" prefHeight="76.0" prefWidth="323.0" text="Supercharged Scored " textAlignment="CENTER" wrapText="true" />
-   <PlusMinusBox fx:id="superChargeScored" layoutX="1072.0" layoutY="118.0" />
+   <Label id="tinyLabels" layoutX="568.0" layoutY="379.0" prefHeight="37.0" prefWidth="203.0" text="↑ Driver Stations" wrapText="true" />
+   <PlusMinusBox fx:id="communityPickups" layoutX="342.0" layoutY="120.0" />
+   <PlusMinusBox fx:id="neutralPickups" layoutX="342.0" layoutY="200.0" />
+   <PlusMinusBox fx:id="singlePickups" layoutX="1043.0" layoutY="120.0" />
+   <PlusMinusBox fx:id="doublePickups" layoutX="1043.0" layoutY="200.0" />
+   <Label id="superChargeScored" layoutX="5.0" layoutY="312.0" prefHeight="76.0" prefWidth="323.0" text="Supercharged Scored " textAlignment="CENTER" wrapText="true" />
+   <PlusMinusBox fx:id="superChargeScored" layoutX="342.0" layoutY="325.0" />
+   <Label layoutX="764.0" layoutY="327.0" text="Ferried Pieces" />
+   <PlusMinusBox fx:id="ferryPieces" layoutX="1043.0" layoutY="325.0" />
+   <Line endX="1017.0" endY="11.0" layoutX="204.0" layoutY="282.0" startX="-183.0" startY="11.0" />
 </Pane>
