--- a/src/main/resources/com/scout/scenes/scene1.fxml
+++ b/src/main/resources/com/scout/scenes/scene1.fxml
@@ -9,50 +9,87 @@
 <Pane id="selectionButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1000.0" prefWidth="1324.0" style="-fx-background-color: #d0d1e6;" stylesheets="@../css/scene1.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.scout.FXMLController">
 
    <Label id="pregame" layoutX="474.0" layoutY="28.0" text="Pregame" />
-   <LimitedTextField id="textField" fx:id="matchNum" layoutX="271.0" layoutY="207.0" onKeyPressed="#validateInput" prefHeight="40.0" prefWidth="170.0" />
+   <LimitedTextField id="textField" fx:id="matchNum" layoutX="251.0" layoutY="177.0" onKeyPressed="#validateInput" prefHeight="40.0" prefWidth="170.0" />
    <LimitedTextField id="textField" fx:id="teamNum" layoutX="251.0" layoutY="99.0" onKeyPressed="#validateInput" prefHeight="40.0" prefWidth="170.0" />
 
    <Button id="pageButton" layoutX="40.0" layoutY="430.0" mnemonicParsing="false" onAction="#prevPage" prefHeight="60.0" prefWidth="175.0" text="Prev Page" />
    <Button id="pageButton" layoutX="1105.0" layoutY="430.0" mnemonicParsing="false" onAction="#nextPage" prefHeight="60.0" prefWidth="175.0" text="Next Page" />
 
-   <ImageView fx:id="startLocationPNG" fitHeight="243.0" fitWidth="523.0" layoutX="797.0" layoutY="148.0" pickOnBounds="true" preserveRatio="true">
+   <ImageView fx:id="startLocationPNG" fitHeight="208.0" fitWidth="422.0" layoutX="858.0" layoutY="173.0" pickOnBounds="true" preserveRatio="true">
       <Image url="@../images/start_locs.png" />
    </ImageView>
 
-   <Label id="startLocation" layoutX="56.0" layoutY="286.0" prefHeight="101.0" prefWidth="175.0" text="Starting Location" wrapText="true" />
-
-   <RadioButton id="selectionButton" layoutX="252.0" layoutY="270.0" mnemonicParsing="false" text="1" userData="1">
-      <toggleGroup>
-         <ToggleGroup fx:id="startLocation" />
-      </toggleGroup>
-   </RadioButton>
-   <RadioButton id="selectionButton" layoutX="252.0" layoutY="320.0" mnemonicParsing="false" text="2" userData="2">
-      <toggleGroup>
-         <fx:reference source="startLocation" />
-      </toggleGroup>
-   </RadioButton>
-   <RadioButton id="selectionButton" layoutX="252.0" layoutY="370.0" mnemonicParsing="false" text="3" userData="3">
-      <toggleGroup>
-         <fx:reference source="startLocation" />
-      </toggleGroup>
-   </RadioButton>
-   <Button id="pageButton" layoutX="956.0" layoutY="72.0" mnemonicParsing="false" onAction="#flipImage" text="Flip Image" />
-   <Text id="teamNameText" fx:id="teamNameText" layoutX="31.0" layoutY="182.0" strokeType="OUTSIDE" strokeWidth="0.0" text="You are scouting:" wrappingWidth="744.8585796356201" />
-   <Label layoutX="496.0" layoutY="209.0" text="Driver Station">
+   <Label id="startLocation" layoutX="671.0" layoutY="147.0" prefHeight="101.0" prefWidth="175.0" text="Starting Location" wrapText="true" />
+   <Button id="pageButton" layoutX="988.0" layoutY="126.0" mnemonicParsing="false" onAction="#flipImage" text="Flip Image" />
+   <Text id="teamNameText" fx:id="teamNameText" layoutX="33.0" layoutY="165.0" strokeType="OUTSIDE" strokeWidth="0.0" text="You are scouting:" wrappingWidth="836.8587017059326" />
+   <Label layoutX="41.0" layoutY="243.0" text="Driver Station">
       <font>
          <Font size="32.0" />
       </font>
    </Label>
-   <RadioButton id="selectionButton" layoutX="440.0" layoutY="260.0" mnemonicParsing="false" style="-fx-text-fill: red;" text="Red1" userData="Red1">
-      <toggleGroup>
-         <ToggleGroup fx:id="driveStation" />
-      </toggleGroup>
-   </RadioButton>
-   <RadioButton id="selectionButton" layoutX="440.0" layoutY="315.0" mnemonicParsing="false" style="-fx-text-fill: red;" text="Red2" toggleGroup="$driveStation" userData="Red2" />
-   <RadioButton id="selectionButton" layoutX="440.0" layoutY="370.0" mnemonicParsing="false" style="-fx-text-fill: red;" text="Red3" toggleGroup="$driveStation" userData="Red3" />
-   <RadioButton id="selectionButton" layoutX="615.0" layoutY="260.0" mnemonicParsing="false" style="-fx-text-fill: blue;" text="Blue1" toggleGroup="$driveStation" userData="Blue1" />
-   <RadioButton id="selectionButton" layoutX="615.0" layoutY="313.0" mnemonicParsing="false" style="-fx-text-fill: blue;" text="Blue2" toggleGroup="$driveStation" userData="Blue2" />
-   <RadioButton id="selectionButton" layoutX="615.0" layoutY="370.0" mnemonicParsing="false" style="-fx-text-fill: blue;" text="Blue3" toggleGroup="$driveStation" userData="Blue3" />
-   <Label layoutX="68.0" layoutY="101.0" text="Team Num" />
-   <Label layoutX="56.0" layoutY="209.0" text="Match Num" />
+   <Label layoutX="41.0" layoutY="101.0" text="Team Num" />
+   <Label layoutX="40.0" layoutY="179.0" text="Match Num" />
+   <GridPane layoutX="67.0" layoutY="278.0" prefHeight="138.0" prefWidth="224.0">
+     <columnConstraints>
+       <ColumnConstraints hgrow="SOMETIMES" maxWidth="119.99998779296875" minWidth="10.0" prefWidth="116.80003662109375" />
+       <ColumnConstraints hgrow="SOMETIMES" maxWidth="159.9999755859375" minWidth="10.0" prefWidth="114.39996337890624" />
+     </columnConstraints>
+     <rowConstraints>
+       <RowConstraints maxHeight="58.0" minHeight="10.0" prefHeight="10.0" vgrow="SOMETIMES" />
+       <RowConstraints maxHeight="58.0" minHeight="0.0" prefHeight="10.0" vgrow="SOMETIMES" />
+       <RowConstraints maxHeight="91.79999389648438" minHeight="10.0" prefHeight="10.0" vgrow="SOMETIMES" />
+     </rowConstraints>
+      <children>
+         <RadioButton id="selectionButton" mnemonicParsing="false" prefWidth="93.0" selected="true" style="-fx-text-fill: red;" text="R1" userData="Red1">
+            <toggleGroup>
+               <ToggleGroup fx:id="driveStation" />
+            </toggleGroup>
+         </RadioButton>
+         <RadioButton id="selectionButton" mnemonicParsing="false" style="-fx-text-fill: red;" text="R2" toggleGroup="$driveStation" userData="Red2" GridPane.rowIndex="1" />
+         <RadioButton id="selectionButton" mnemonicParsing="false" style="-fx-text-fill: red;" text="R3" toggleGroup="$driveStation" userData="Red3" GridPane.rowIndex="2" />
+         <RadioButton id="selectionButton" mnemonicParsing="false" prefHeight="43.0" prefWidth="141.0" style="-fx-text-fill: blue;" text="B1" toggleGroup="$driveStation" userData="Blue1" GridPane.columnIndex="1" />
+         <RadioButton id="selectionButton" mnemonicParsing="false" prefWidth="147.0" style="-fx-text-fill: blue;" text="B2" toggleGroup="$driveStation" userData="Blue2" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+         <RadioButton id="selectionButton" mnemonicParsing="false" style="-fx-text-fill: blue;" text="B3" toggleGroup="$driveStation" userData="Blue3" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+      </children>
+   </GridPane>
+   <Label id="preload" layoutX="468.0" layoutY="197.0" text="Preload" />
+   <GridPane layoutX="468.0" layoutY="246.0" prefHeight="132.0" prefWidth="163.0">
+     <columnConstraints>
+       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+     </columnConstraints>
+     <rowConstraints>
+       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+     </rowConstraints>
+      <children>
+         <RadioButton id="selectionButton" mnemonicParsing="false" prefWidth="154.0" text="Cone" userData="cone">
+            <toggleGroup>
+               <ToggleGroup fx:id="preload" />
+            </toggleGroup>
+         </RadioButton>
+         <RadioButton id="selectionButton" mnemonicParsing="false" text="Cube" toggleGroup="$preload" userData="cube" GridPane.rowIndex="1" />
+         <RadioButton id="selectionButton" mnemonicParsing="false" selected="true" text="N/A" toggleGroup="$preload" userData="N/A" GridPane.rowIndex="2" />
+      </children>
+   </GridPane>
+   <GridPane layoutX="726.0" layoutY="243.0" prefHeight="138.0" prefWidth="85.0">
+     <columnConstraints>
+       <ColumnConstraints hgrow="SOMETIMES" maxWidth="86.20001220703125" minWidth="10.0" prefWidth="79.80001831054688" />
+     </columnConstraints>
+     <rowConstraints>
+       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+     </rowConstraints>
+      <children>
+      
+         <RadioButton id="selectionButton" mnemonicParsing="false" selected="true" text="1" userData="1">
+            <toggleGroup>
+               <ToggleGroup fx:id="startLocation" />
+            </toggleGroup>
+         </RadioButton>
+         <RadioButton id="selectionButton" mnemonicParsing="false" text="2" toggleGroup="$startLocation" userData="2" GridPane.rowIndex="1" />
+         <RadioButton id="selectionButton" mnemonicParsing="false" text="3" toggleGroup="$startLocation" userData="3" GridPane.rowIndex="2" />
+      </children>
+   </GridPane>
 </Pane>
