--- a/src/main/resources/com/scout/scenes/scene4.fxml
+++ b/src/main/resources/com/scout/scenes/scene4.fxml
@@ -11,7 +11,7 @@
 
    <Label id="chargeStation" layoutX="106.0" layoutY="107.0" text="Charging Station" />
 
-   <CheckBox id="buddyClimb" fx:id="buddyClimb" layoutX="688.0" layoutY="183.0" mnemonicParsing="false" prefHeight="105.0" prefWidth="467.0" text="Buddy Climb? (helped other robot climb)" />
+   <CheckBox id="buddyClimb" fx:id="buddyClimb" layoutX="646.0" layoutY="151.0" mnemonicParsing="false" prefHeight="191.0" prefWidth="503.0" text="Buddy Climb? (helped other robot climb)" />
 
    <RadioButton id="selectionButton" layoutX="60.0" layoutY="170.0" mnemonicParsing="false" text="Engage" userData="engage">
       <toggleGroup>
@@ -33,7 +33,7 @@
              <fx:reference source="teleopBalance" />
         </toggleGroup>
    </RadioButton>
-   <RadioButton id="selectionButton" layoutX="60.0" layoutY="299.0" mnemonicParsing="false" text="N/A" userData="N/A">
+   <RadioButton id="selectionButton" layoutX="60.0" layoutY="299.0" mnemonicParsing="false" selected="true" text="N/A" userData="N/A">
         <toggleGroup>
              <fx:reference source="teleopBalance" />
         </toggleGroup>
